# face-tweaking

./: .gitattributes  .gitignore  COMPILE.sh  README.md  RUN.sh
GUI/: COMPILE_RUN.sh
GUI/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
GUI/nbproject/private/: private.properties  private.xml
GUI/src/app/: main.java
engine/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  engine  engine.cbp  main.cpp
engine/dlib/: Makefile  cmake_install.cmake  dlib.cbp
features/add-beard/: clone.py  main.cpp  seamless.cpp
features/eye-color/: eye-color.cpp
features/test_feature/: test_feature.cpp  test_feature.h
lib/: all_headers.h
lib/features/: BaseFeature.cpp  BaseFeature.h
lib/features/AddBeard/: AddBeard.cpp  AddBeard.h
lib/features/AddSmile/: AddSmile.cpp  AddSmile.h
lib/features/EyeColor/: EyeColor.cpp  EyeColor.h
lib/features/EyeColor/media/: PurpleEyes.jpg.txt
lib/features/add_beard/: add_beard.cpp  add_beard.h  tri.txt
lib/features/add_beard/media/: BigBeard.jpg.txt
lib/features/add_smile/: add_smile.cpp  add_smile.h
lib/features/add_smile/media/: smile.jpg.txt
lib/features/eye_color/: eye_color.cpp  eye_color.h  tri.txt
lib/features/eye_color/media/: BlueEyes.jpg.txt  BrownEyes.jpg.txt  YellowEyes.jpg.txt
src/GUI/: main.java
src/add-beard/: CMakeLists.txt  main.cpp  mask.txt  seamless.cpp
src/engine/: CMakeLists.txt  main.cpp
src/eye-color/: CMakeLists.txt  donald_trump.jpg.txt  main.cpp  mystique.png.txt  planning.txt
src/eye-color/FaceMorph/: faceMorph.cpp
src/eye-color/FaceSwap/: faceSwap.cpp
src/eye-detection/: CMakeLists.txt  haarOpenCV.cpp  main.cpp  tri.txt
src/eye-detection/FaceMorph/: faceMorph.cpp
src/gui/DesktopApp/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
src/gui/DesktopApp/nbproject/private/: private.xml
src/gui/DesktopApp/src/app/: DesktopApp.java
src/gui/Login/: build.xml
src/gui/Login/nbproject/: build-impl.xml  genfiles.properties  project.properties
src/gui/Login/nbproject/private/: private.properties  private.xml
src/gui/Login/src/login/: Login.java
